--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-  
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -18,15 +15,15 @@
   <center>
     <h1 class="btn btn-info heading">Object Detection for Whitehat Jr</h1>
     <br>
-    <h3 id="bed" class="anchor"><a href="">Bedroom</a></h3>
+    <h3 id="bed" class="anchor"><a href="bed.html">Bedroom</a></h3>
     <br>
-    <h3 id="bottle" class="anchor"><a href="">Bottle</a></h3>
+    <h3 id="bottle" class="anchor"><a href="bottle.html">Bottle</a></h3>
     <br>
-    <h3 id="computer" class="anchor"><a href="">Computer</a></h3>
+    <h3 id="computer" class="anchor"><a href="computer.html">Computer</a></h3>
     <br>
-    <h3 id="animal" class="anchor"><a href="">Dog and Cat</a></h3>
+    <h3 id="animal" class="anchor"><a href="dog-and-cat.html">Dog and Cat</a></h3>
     <br>
-    <h3 id="fruit" class="anchor"><a href="">Fruit Bowl</a></h3>
+    <h3 id="fruit" class="anchor"><a href="fruit.html">Fruit Bowl</a></h3>
   </center>
 
   <script src="main.js"></script>
